@@ -1,15 +1,12 @@
 package com.r3.conclave.sample.enclave;
 
-import com.esotericsoftware.kryo.Kryo;
-import com.esotericsoftware.kryo.io.Input;
 import com.r3.conclave.enclave.Enclave;
 import com.r3.conclave.mail.EnclaveMail;
-import com.r3.conclave.sample.common.AdDetails;
-import com.r3.conclave.sample.common.InputData;
-import com.r3.conclave.sample.common.InputDataSerializer;
-import com.r3.conclave.sample.common.UserDetails;
+import com.r3.conclave.sample.common.*;
 
 import java.io.ByteArrayInputStream;
+import java.io.IOException;
+import java.io.ObjectInputStream;
 import java.security.PublicKey;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -23,75 +20,69 @@ import java.util.stream.Collectors;
  */
 public class PSIEnclave extends Enclave {
 
-    private static final String MERCHANT = "MERCHANT";
-    private static final String SERVICE_PROVIDER = "SERVICE-PROVIDER";
     private List<UserDetails> userDetailsList;
     private List<AdDetails> adDetailsList;
 
-    private Map<String , String> clientToRoutingHint = new HashMap();
-    private Map<String, PublicKey> clientToPublicKey = new HashMap();
-    private Kryo kryo = new Kryo();
-
+    private EnumMap<Role, String> clientToRoutingHint = new EnumMap<>(Role.class);
+    private EnumMap<Role, PublicKey> clientToPublicKey = new EnumMap<>(Role.class);
 
     /**
      * This method gets called when client wants to communicate to enclave, and sends a message wrapped in a mail to host.
      * Host in turn calls deliverMail method which in turn
      * calls this method. In this method, we will deserialize the mail message, perform the computation and send the
      * result back to the clients.
-     * @param id
-     * @param mail
-     * @param routingHint
+     *
+     * @param mail        decrypted and authenticated mail body
+     * @param routingHint used by enclave to tell host whom to send the reply back to
      */
     @Override
-    protected void receiveMail(long id, EnclaveMail mail, String routingHint) {
+    protected void receiveMail(EnclaveMail mail, String routingHint) {
+        //Deserialize the mail object using custom deserializers
+        InputData inputData = (InputData) deserialize(mail.getBodyAsBytes());
 
-        //deserialize the mail object using custom deserializers
-        InputData inputData = deserialize(mail);
+        if (inputData != null) {
+            //Retrieve the clientType from mail.
+            Role clientType = inputData.getClientType();
 
-        //retrieve the clientType from mail. clientType is not encrypted
-        String clientType = inputData.getClientType();
+            /*Use clientToRoutingHint to store client routing information, which can be used
+            while sending reply back to client*/
+            clientToRoutingHint.put(clientType, routingHint);
 
-        //use clientToRoutingHint to store client routing information, which can be used
-        //while sending reply back to client
-        clientToRoutingHint.put(clientType, routingHint);
+            /*Use clientToPublicKey which identifies the key of the client, which can be used by
+            postoffice to encrypt data and send to client*/
+            clientToPublicKey.put(clientType, mail.getAuthenticatedSender());
 
-        //use clientToPublicKey which identifies the key of the client, which can be used by
-        // postoffice to encrypt data and send to client
-        clientToPublicKey.put(clientType, mail.getAuthenticatedSender());
+            //Depending on the client type populate one of the two lists
+            if (clientType == Role.SERVICE_PROVIDER) {
+                adDetailsList = new ArrayList<>(inputData.getAdDetailsList().size());
+                adDetailsList.addAll(inputData.getAdDetailsList());
+            } else if (clientType == Role.MERCHANT) {
+                userDetailsList = new ArrayList<>(inputData.getUserDetailsList().size());
+                userDetailsList.addAll(inputData.getUserDetailsList());
+            }
 
-        //depending on the client type populate one of the two lists
-        if (SERVICE_PROVIDER.equals(clientType)) {
-            adDetailsList = new ArrayList(inputData.getAdDetailsList().size());
-            adDetailsList.addAll(inputData.getAdDetailsList());
-        } else if (MERCHANT.equals(clientType)) {
-            userDetailsList = new ArrayList(inputData.getUserDetailsList().size());
-            userDetailsList.addAll(inputData.getUserDetailsList());
-        }
+            //Once both the lists are populated, perform the ad conversion rate calculation
+            if (userDetailsList != null && adDetailsList != null && !userDetailsList.isEmpty() && !adDetailsList.isEmpty()) {
+                Double adConversionRate = getAdConversionRate(userDetailsList, adDetailsList);
 
-        //once both the lists are populated, perform the ad conversion rate calculation
-        if (userDetailsList != null && adDetailsList != null && !userDetailsList.isEmpty() && !adDetailsList.isEmpty()) {
-            Double adConversionRate = getAdConversionRate(userDetailsList, adDetailsList);
+                //send the ad conversion rate to merchant. use merchant's public key to encrypt the message
+                //such that only merchant will be able to decrypt it
+                byte[] encryptedReply = postOffice(clientToPublicKey.get(Role.MERCHANT)).
+                        encryptMail(adConversionRate.toString().getBytes());
+                postMail(encryptedReply, clientToRoutingHint.get(Role.MERCHANT));
 
-            //send the ad conversion rate to merchant. use merchant's public key to encrypt the message
-            //such that only merchant will be able to decrypt it
-            byte[] encryptedReply = postOffice(clientToPublicKey.get(MERCHANT)).
-                    encryptMail(adConversionRate.toString().getBytes());
-            postMail(encryptedReply, clientToRoutingHint.get(MERCHANT));
-
-            //send the ad conversion rate to service provider. use service provider's public key to
-            //encrypt the message such that only merchant will be able to decrypt it
-            encryptedReply = postOffice(clientToPublicKey.get(SERVICE_PROVIDER)).
-                    encryptMail(adConversionRate.toString().getBytes());
-            postMail(encryptedReply, clientToRoutingHint.get(SERVICE_PROVIDER));
+                /*Send the ad conversion rate to service provider. use service provider's public key to
+                encrypt the message such that only merchant will be able to decrypt it*/
+                encryptedReply = postOffice(clientToPublicKey.get(Role.SERVICE_PROVIDER)).
+                        encryptMail(adConversionRate.toString().getBytes());
+                postMail(encryptedReply, clientToRoutingHint.get(Role.SERVICE_PROVIDER));
+            }
         }
     }
 
     /**
      * This calculates ad conversion rate.
      * ad conversion rate = users who have made purchases / total users who have clicked the ads
-     * @param userDetailsList
-     * @param adDetailsList
-     * @return ad conversion rate
      */
     public Double getAdConversionRate(List<UserDetails> userDetailsList, List<AdDetails> adDetailsList) {
 
@@ -111,17 +102,24 @@ public class PSIEnclave extends Enclave {
                 .filter(serviceProviderCreditCardNumbers::contains)
                 .collect(Collectors.toSet());
 
-        return  (new Double(usersWhoPurchasedAfterClickingAd.size()) / new Double(adDetailsList.size())) * 100;
+        return (Double.valueOf(usersWhoPurchasedAfterClickingAd.size()) / Double.valueOf(adDetailsList.size())) * 100;
     }
 
     /**
      * Using Kryo to deserialize object when passed from client to enclave
-     * @param mail
+     *
+     * @param data client request wrapped in mail object in bytes
      * @return deserialized input object
      */
-    private InputData deserialize(EnclaveMail mail) {
-        kryo.register(InputData.class, new InputDataSerializer());
-        Input input = new Input(new ByteArrayInputStream(mail.getBodyAsBytes()));
-        return kryo.readObject(input, InputData.class);
+    public static Object deserialize(byte[] data) {
+        ByteArrayInputStream in = new ByteArrayInputStream(data);
+        ObjectInputStream is;
+        try {
+            is = new ObjectInputStream(in);
+            return is.readObject();
+        } catch (IOException | ClassNotFoundException e) {
+            e.printStackTrace();
+        }
+        return null;
     }
 }
